--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-    outline: none;
-    font-family: 'Poppins', sans-serif;;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  outline: none;
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    min-height: 100vh;
-    background-image: url(../img/bg.jpg);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  min-height: 100vh;
+  background-image: url(../img/bg.jpg);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#container{
-    display: flex;
-    flex-direction: column;
-    min-height: 26rem;
-    width: 24rem;
-    padding: 3rem;
-    background: rgba(255, 196, 206, 0.3);
-    border: 2px solid rgb(113, 104, 111);
-    border-radius: 2rem;
-    backdrop-filter: blur(50px);
+#container {
+  display: flex;
+  flex-direction: column;
+  min-height: 26rem;
+  width: 24rem;
+  padding: 3rem;
+  background: rgba(255, 196, 206, 0.3);
+  border: 2px solid rgb(68, 60, 66);
+  border-radius: 1.2rem;
+  backdrop-filter: blur(50px);
 }
 
-input, textarea, button{
-    background-color: rgb(255, 255, 255);
-    border: 2px solid rgb(113, 104, 111);
-    border-radius: .3rem;
-    width: 100%;
-    margin-bottom: .5rem;
-    padding: .3rem;
-    font-size: 1rem;
-    color:rgb(53, 49, 52)
+.header {
+  margin-bottom: 1em;
+  overflow: hidden;
 }
 
-input, textarea{
-    background-color: #fff;
+.form-control {
+  padding-bottom: 1.5rem;
+  position: relative;
 }
 
-input, button{
-    height: 3rem;
+.form-control i {
+  position: absolute;
+  top: 17px;
+  right: 16px;
+  visibility: hidden;
 }
 
-textarea{
-    height: 6rem;
+.form-control small {
+  font-size: 0.8em;
+  position: absolute;
+  top: 50px;
+  left: 0px;
+  visibility: hidden;
 }
 
-button{
-    background-color: rgb(113, 104, 111);
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
+.header h1 {
+  text-align: center;
+  font-weight: bold;
+}
+
+input,
+button {
+  border-radius: 0.3rem;
+  width: 100%;
+  padding: 0.3rem;
+  font-size: 1rem;
+  color: rgb(53, 49, 52);
+  height: 3rem;
+}
+
+input {
+  background-color: #fff;
+  border: 2px solid rgb(68, 60, 66);
+}
+
+button {
+  background-color: rgb(68, 60, 66);
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  transition: 0.3s ease;
+}
+
+button:hover {
+  background-color: rgb(99, 88, 88);
+}
+
+/* Success and Error */
+
+.form-control.error input {
+  box-shadow: 1px 1px 4px rgb(150, 0, 0);
+}
+
+.form-control.success i.fa-circle-check {
+  visibility: visible;
+  color: rgb(0, 130, 0);
+}
+
+.form-control.error i.fa-circle-exclamation {
+  visibility: visible;
+  color: rgb(150, 0, 0);
+}
+
+.form-control.error small {
+  visibility: visible;
+  color: rgb(90, 0, 0);
 }
